--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Josefin Sans";
+  src: url("/Font/JosefinSans-VariableFont_wght.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 body {
   font-family: "Nunito", sans-serif !important;
