--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+  padding: 0;
+  margin: 0;
+}
+
+.content-wrapper {
+  flex: 1; 
+}
 
 ul {
   list-style: none;
