--- a/src/Layout/PublicLayout.module.css
+++ b/src/Layout/PublicLayout.module.css
@@ -15,7 +15,7 @@
 }
 
 .navLogo a {
-  color: rgb(255, 255, 255);
+  color: #ffc107;
   font-size: 1.6rem;
   text-decoration: none;
   display: flex;
