--- a/src/Layout/PublicLayout.module.css
+++ b/src/Layout/PublicLayout.module.css
@@ -20,7 +20,8 @@
 }
 
 .navLogo a {
-  color: #ffc107;
+  /* color: #ffc107; */
+  color: #640a0a;
   font-size: 1.6rem;
   text-decoration: none;
   display: flex;
