--- a/src/components/pages/MenuItem.module.css
+++ b/src/components/pages/MenuItem.module.css
@@ -1,6 +1,27 @@
-.Menuitem_parent{
-width: 100%;
-background-color: #b81717;
-position: relative;
-left: -1rem !important;
+
+.imgStyle {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+/* Optional: Add scroll for small screens */
+.Menuitem_parent {
+  padding: 10px;
+}
+
+@media screen and (max-width: 576px) {
+  .Menuitem_parent {
+    font-size: 14px;
+  }
+
+  .imgStyle {
+    width: 40px;
+    height: 40px;
+  }
+
+  .table {
+    font-size: 13px;
+  }
 }
